use sendfile for file copying

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
 - currently the program terminates upon encountering any error;
   make it behave more usefully.
 
+- currently only works on Linux >= 2.6.33 as it uses sendfile for
+  copying small files; simply revert to using File::Copy's copy and
+  drop the size argument to it if you're on another system.
+
